+ Update to use Paths to get our URL for the File